# LaptopActivityTracker

./: README.md  data_visualization.ipynb  pyproject.toml  run.sh
data/: 2026-03-16.csv  2026-03-17.csv  2026-03-18.csv  2026-03-19.csv  2026-03-20.csv  2026-03-21.csv  2026-03-22.csv  2026-03-23.csv  2026-03-24.csv  2026-03-25.csv  2026-03-26.csv  2026-03-27.csv  2026-03-28.csv  2026-03-29.csv
osascripts/: chrome-info.applescript  current-tab.applescript  frontmost-window.applescript
