[project]
name = "laptopactivitytracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pynput>=1.8.1",
    "pyobjc-framework-quartz>=12.1",
    "quart>=0.20.0",
    "seaborn>=0.13.2",
]
